Fix flag size ratio on smaller screens

--- a/src/assets/scss/components/_country-details.scss
+++ b/src/assets/scss/components/_country-details.scss
@@ -114,7 +114,7 @@
 
       @include breakpoint(580px) {
         width: 250px;
-        height: 125px;
+        height: 150px;
       }
     }
 
